Fix unicode encoding/decoding in File content.
Fixes #14944

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog
 1.0.3 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Fix unicode encoding/decoding in File handling. See #14944.
 
 
 1.0.2 (2015-02-27)
