--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0.4 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 1.0.3 (2015-03-18)
 ==================
 
