--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0.6 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 1.0.5 (2015-03-31)
 ==================
 
