Another snapshot on the way to 1.1.
Finish local/remote refactorings by making everything remote. Local deployments are now also using the execnet remoting layer through popen. This makes the code more testable and
requires fewer special cases.

Work on the remote output management to show actual changes. There is still more work to do, but I think I may have a green bar at the moment.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,11 @@ Changelog
 1.1a1 (unreleased)
 ==================
 
+- Provide '--fast' mode: do not perform bootstrapping. 
+
+  This is a first step to improve bootstrapping times. The switch is rather dumb but allows us to work a) offline
+  in some cases and b) develop faster.
+
 - Fix unicode encoding/decoding in File handling. See #14944.
   (Ported from 1.0)
 
