--- a/TODO
+++ b/TODO
@@ -1,22 +1,36 @@
-batou 1.1
 
-- better documentation
--- users
--- developers
--- faq
--- guides
--- API
--- library
--- cmdline
--- comparison with other tools
--- avoid large chunks of "TODO" documentation
+Error reporting:
+
+configuration
+
+X invalid override attribute name
+X invalid override conversion
+X unused resources
+X unsatisfied resources
+X missing component
+X missing environment
+X missing host (this condition does not actually exist)
+X syntax errors in components (avoid batou-specific traceback)
+- noexisting component section in secrets
+- nonexisting component section in environment
+- superfluous non-component section in environment
+- circular dependencies
+
+X> show all at the same time
+
+- hide errors that are unsatisfied resources if other errors exist (except
+  when circular dependencies!!!)
 
 
-- general output restructuring
-- error reporting
-- better initial bootstrap
-- bootstrap w/ project structure template
-- replace `local` and `remote` with `deploy` command,
-  substitute the `--batch` command into `agent`?
-- mailingliste einrichten (batou@lists.flyingcircus.io)
-    -> kill google groups or keep using it?
+deployment
+
+--> improve showing actual error locations from where something was defined during the verify/update phase
+- verbindungsaufbaufehler
+- konkrete fehler bei verify/update und cmd()
+
+
+
+more
+
+X get rid of local/nonlocal command, make this a property of the environment and make a run command with --local and --remote parameters to override instead
+
