--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0.8 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 1.0.7 (2015-05-04)
 ==================
 
