--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,8 @@ Changelog
 1.0.8 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Update built-in requests version to avoid certificate issues with
+  newer Python 2.7.
 
 
 1.0.7 (2015-05-04)
