--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0.9 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 1.0.8 (2015-05-06)
 ==================
 
