Update changelog for #16462

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,10 @@ Changelog
 1.1a1 (unreleased)
 ==================
 
-- Provide '--fast' mode: do not perform bootstrapping. 
+- Clear PYTHONPATH for bootstrapping to avoid accidental interaction with
+  unclean Python environments.
+
+- Provide '--fast' mode: do not perform bootstrapping.
 
   This is a first step to improve bootstrapping times. The switch is rather dumb but allows us to work a) offline
   in some cases and b) develop faster.
