--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog
 1.1.0a4 (unreleased)
 ====================
 
-- Nothing changed yet.
+- Actually get pull-based Git repositories to work. Still experimental, though.
 
 
 1.1.0a3 (2015-09-05)
