Fix error output (#17617)
Get some broken slow tests working again.

However, I can't fix all of them on OS X as I'm missing the necessary
Python versions. Damn. Supporting 2.4 is getting incredibly hard.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,9 @@ Changelog
 
 - Fix Mercurial repository tests that broke without noticing.
 
+- Add end-to-end test for our new error reporting which got a
+  regression (#17617)
+
 1.1.0a5 (2015-09-09)
 ====================
 
