--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.1.0a8 (unreleased)
+====================
+
+- Nothing changed yet.
+
+
 1.1.0a7 (2015-09-18)
 ====================
 
