--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.1.0a9 (unreleased)
+====================
+
+- Nothing changed yet.
+
+
 1.1.0a8 (2015-10-05)
 ====================
 
