Fix problem with hidden conversion errors.
This was especially nasty as Address objects that were overridden would
cause "invalid override for unknown attribute" messages when DNS is flaky.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,9 @@ Changelog
 1.1.0a8 (unreleased)
 ====================
 
-- Nothing changed yet.
+- Do not implicitly perform attribute conversions when applying overrides.
+  Due to the behaviour of `hasattr` this shadowed conversion exceptions
+  and also performed unnecessary computation or network access (e.g. DNS).
 
 
 1.1.0a7 (2015-09-18)
