Back to development: 1.1.0a10

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.1.0a10 (unreleased)
+=====================
+
+- Nothing changed yet.
+
+
 1.1.0a9 (2015-10-14)
 ====================
 
