--- a/README
+++ b/README
@@ -11,7 +11,7 @@ Getting started with a new project is easy::
 
     $ mkdir myproject
     $ cd myproject
-    $ curl https://bitbucket.org/flyingcircus/batou/.../bootstrap-template -o batou
+    $ curl https://bitbucket.org/flyingcircus/batou/raw/tip/src/batou/bootstrap-template -o batou
     $ chmod +x batou
     $ ./batou
 
