--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog
 1.1.0a10 (unreleased)
 =====================
 
-- Nothing changed yet.
+- Sort logfiles for logrotate to avoid superfluous reloading.
 
 
 1.1.0a9 (2015-10-14)
