--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.1.0a12 (unreleased)
+=====================
+
+- Nothing changed yet.
+
+
 1.1.0a11 (2015-11-24)
 =====================
 
