--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,11 @@ Changelog
 1.1.0a12 (unreleased)
 =====================
 
-- Nothing changed yet.
+- Allow to set the contact group of the Supervisor service check from
+  the environment::
+
+    [component:supervisor]
+    check_contact_groups = group1, group2
 
 
 1.1.0a11 (2015-11-24)
