Mark links to contribute inside README as links.

--- a/README
+++ b/README
@@ -72,8 +72,8 @@ Features
 Contribute
 ----------
 
-- Issue Tracker: plan.flyingcircus.io/projects/batou
-- Source Code: bitbucket.org/flyingcircus/batou
+- Issue Tracker: <https://plan.flyingcircus.io/projects/batou>`_
+- Source Code: <https://bitbucket.org/flyingcircus/batou>`_
 
 Support
 -------
