--- a/README
+++ b/README
@@ -72,8 +72,8 @@ Features
 Contribute
 ----------
 
-- Issue Tracker: <https://plan.flyingcircus.io/projects/batou>`_
-- Source Code: <https://bitbucket.org/flyingcircus/batou>`_
+- `Issue Tracker: <https://plan.flyingcircus.io/projects/batou>`_
+- `Source Code: <https://bitbucket.org/flyingcircus/batou>`_
 
 Support
 -------
