--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -11,6 +11,8 @@ Changelog
 - Fix accidental conversions for component attribute defaults: avoid
   conversions if we have overrides.
 
+- Fix Debian supervisor's pid file attribute.
+
 1.0.8 (2015-05-06)
 ==================
 
