--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0.10 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 1.0.9 (2016-01-03)
 ==================
 
