--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,8 +5,8 @@ Changelog
 1.1.1 (unreleased)
 ==================
 
-- Nothing changed yet.
-
+- Fix supervisor's buildout dependency to avoid non-convergence of
+  the pip-installed package.
 
 1.1 (2016-01-03)
 ================
