--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog
 1.1.3 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Improve component error reporting.
 
 
 1.1.2 (2016-01-20)
