--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,10 +2,14 @@
 Changelog
 =========
 
-1.1.3 (unreleased)
-==================
+1.2 (unreleased)
+================
 
-- Nothing changed yet.
+- Add more utilities for managing secrets: get an overview of
+  all environments and what user keys are there, automatically
+  add or remove users to all, one, or multiple environments.
+
+  Note: the old './batou secrets <env>' is now './batou secrets edit <env>'
 
 
 1.1.2 (2016-01-20)
