--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.2b2 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 1.2b1 (2016-01-28)
 ==================
 
