--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog
 1.2b2 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Remove the deprecated 'remote' command alias.
 
 
 1.2b1 (2016-01-28)
