Back to development: 1.2b3

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.2b3 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 1.2b2 (2016-01-29)
 ==================
 
