--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.3b2 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 1.3b1 (2016-03-09)
 ==================
 
