--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -13,6 +13,8 @@ Changelog
 
 - Hide passwords from output of the `Download` component.
 
+- Fix disconnect error in consistency check.
+
 1.3b1 (2016-03-09)
 ==================
 
