--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -15,6 +15,8 @@ Changelog
 
 - Hide passwords from output of the `Download` component.
 
+- Add `dependencies` to `supervisor.Program`.
+
 1.3b1 (2016-03-09)
 ==================
 
