--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -20,6 +20,9 @@ Changelog
 
 - Fix disconnect error in consistency check.
 
+- Download virtualenv via PIP. This fixes an error caused by the PyPI
+  restructuring
+
 1.3b1 (2016-03-09)
 ==================
 
