Back to development: 1.3b3

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.3b3 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 1.3b2 (2016-05-27)
 ==================
 
