--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog
 1.3b3 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Fix a crash in case of GnuPG2 is not installed at all.
 
 
 1.3b2 (2016-05-27)
