--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.3b4 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 1.3b3 (2016-05-30)
 ==================
 
