--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0.11 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 1.0.10 (2016-06-03)
 ===================
 
