Update virtualenv when the Python version changes.
Also removed a test which checks that distribute is being updated to setuptools: Distribute cannot be installred any more (at least not with the setuptools/pip in batou's venv)


re #22805

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,8 @@ Changelog
 1.3b4 (unreleased)
 ==================
 
+- Update virtualenv when the Python version changes (#22805)
+
 - Remove support for virtualenv with Python 2.4, 2.5 and 3.2.
 
 - Add way to set arbitrary environment variables in crontab.
