--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog
 1.4.0 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Bug fix: Don't update virtualenv on each run. (#23983)
 
 
 1.3.0 (2016-09-12)
