--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.4.0 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 1.3.1 (2016-10-13)
 ==================
 
