--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,8 @@ Changelog
 1.4.0 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Make virtualenv files writable before delete. On systems like NixOS the files
+  copied by virtualenv are read-only, hence `rm -rf` cannot remove them (#24427)
 
 
 1.3.1 (2016-10-13)
