--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.3.3 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 1.3.2 (2016-11-02)
 ==================
 
