--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog
 1.3.4 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Fix for "make virtualenv files writable" (#24427)
 
 
 1.3.3 (2016-11-25)
