--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog
 1.3.5 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Fix installation of batou egg with recend setuptools version (#25089)
 
 
 1.3.4 (2016-11-25)
