--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.3.6 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 1.3.5 (2016-12-06)
 ==================
 
