--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog
 1.4.0b3 (unreleased)
 ====================
 
-- Fix update command.
+- Fix update and secrets commands, to be compatible with `--reset`.
 
 
 1.4.0b2 (2016-12-13)
