Back to development: 1.4.0b4

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.4.0b4 (unreleased)
+====================
+
+- Nothing changed yet.
+
+
 1.4.0b3 (2016-12-13)
 ====================
 
