--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.4.0b5 (unreleased)
+====================
+
+- Nothing changed yet.
+
+
 1.4.0b4 (2016-12-14)
 ====================
 
