--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.4.0b8 (unreleased)
+====================
+
+- Nothing changed yet.
+
+
 1.4.0b7 (2016-12-14)
 ====================
 
