--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog
 1.4.0b8 (unreleased)
 ====================
 
-- Nothing changed yet.
+- Minor readability improvement for the parallel connection code. changed yet.
 
 
 1.4.0b7 (2016-12-14)
