--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.4.1 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 1.4.0 (2017-03-06)
 ==================
 
