--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog
 1.5.0a3 (unreleased)
 ====================
 
-- Nothing changed yet.
+- Improve error reporting in multi host environments.
 
 
 1.5.0a2 (2017-03-09)
