--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog
 1.5.0a4 (unreleased)
 ====================
 
-- Nothing changed yet.
+- Add `Component.log()` method to easily put out messages during configure/verify/update.
 
 
 1.5.0a3 (2017-03-09)
