--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.5.0a5 (unreleased)
+====================
+
+- Nothing changed yet.
+
+
 1.5.0a4 (2017-03-30)
 ====================
 
