--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.5.0a6 (unreleased)
+====================
+
+- Nothing changed yet.
+
+
 1.5.0a5 (2017-05-21)
 ====================
 
