--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog
 1.5.0a6 (unreleased)
 ====================
 
-- Nothing changed yet.
+- Detect "no change" when using long revision ids in `mercurial.Clone()`.
 
 
 1.5.0a5 (2017-05-21)
