--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.5.0a7 (unreleased)
+====================
+
+- Nothing changed yet.
+
+
 1.5.0a6 (2017-05-29)
 ====================
 
