--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.5.1 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 1.5.0 (2017-06-23)
 ==================
 
