Back to development: 1.6.0a2

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.6.0a2 (unreleased)
+====================
+
+- Nothing changed yet.
+
+
 1.6.0a1 (2017-07-03)
 ====================
 
