--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,8 @@ Changelog
 1.6.0a2 (unreleased)
 ====================
 
+- General update of batou's dependencies.
+
 - Fix: Don't update ``git.Clone`` when there are incoming changes but the
   revision is fixed.
 
