--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog
 1.6.0a3 (unreleased)
 ====================
 
-- Nothing changed yet.
+- Fix: Grant database.* when using ``mysql.Grant``
 
 
 1.6.0a2 (2017-07-04)
