--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.6.0a4 (unreleased)
+====================
+
+- Nothing changed yet.
+
+
 1.6.0a3 (2017-08-09)
 ====================
 
