--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog
 1.6.0a4 (unreleased)
 ====================
 
-- Nothing changed yet.
+- Fix `self.log()` after `configure()` when no log was emitted during `configure()`
 
 
 1.6.0a3 (2017-08-09)
