--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.6.1 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 1.6.0 (2017-11-07)
 ==================
 
