Back to development: 1.6.2

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+1.6.2 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 1.6.1 (2017-11-27)
 ------------------
 
